[R6.1.0]
* Stop the whole process when clicking the Exit options menu item.
* Fix the crashes when sending SetGlobalProperties and ResetGlobalProperties commands.
* Fix the list of commands available for protocol v1.
* Fix: the user can set Alert command's ttsChunk parameter.
* Fix: don't show choiceSetId in the app until a successful response has come.

[R6.0.0]
SyncProxyTester:
+ When the v1 protocol is active, the user can only send a command supported by version 1.
+ Add the possibility to set the parameters of SetGlobalProperties and ResetGlobalProperties commands with GUI.
* Fix a rare crash when creating a command after resuming the app.
* Fix sending CreateChoiceSet command by adding image values.
+ The user can specify position when creating Slider request.
+ Adding EncodedSyncPData support to SyncProxyTester (Ford's).
+ After toggling protocol version, the app needs to be restarted by the user.
+ When clicking the Exit options menu item, the app closes the activity and also stops the proxy service.
+ The user can specify VR synonyms for choice set's commands with the help of additional text fields.
+ Add extra logs for requests.
+ Persist the log messages in the UI during one app launch.
* Fix: AddCommand dialog: correctly send the entered VR Synonym with the command.
+ Introduce changelog.
+ The app version, build info, and the changelog can be shown from options menu => "App version".
+ All the bugs and features that have been around since the beginning.
+ CreateChoiceSet dialog: the user can create a choice set with 1..3 choices with the help of checkboxes.
+ Show current protocol version in the options menu: "Toggle Protocol Ver. (cur 2)".