@@ -1,4 +1,5 @@
 [R6.1.0]
+* Don't allow to delete the top-level menu.
 * Stop the whole process when clicking the Exit options menu item.
 * Fix the crashes when sending SetGlobalProperties and ResetGlobalProperties commands.
 * Fix the list of commands available for protocol v1.
